--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -7,7 +7,6 @@
 <ul>
     @foreach (var item in Model)
     {
-        <li>@item.Description <a asp-action="delete" app-route-id="@item.Id">delete</a></li>
+        <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
     }
-
 </ul>
